Test/datatypes/duplicate_constructor.bpl.expect
duplicate_constructor.bpl(6,24): error: more than one declaration of datatype constructor name: Left
1 parse errors detected in duplicate_constructor.bpl
